reworked structure and content of presentation slides

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -69,16 +69,28 @@
     "## Eine kurze Einführung (1)\n",
     "\n",
     "- hohe Anforderungen hinsichtlich der **funktionalen Sicherheit** an **hochautomatisierte** oder **autonome Systeme** und die dafür eingesetzten **KI-Algorithmen**\n",
-    "- sicherheitstechnische Bewertbarkeit im Sinne von **Transparenz** (vollständiges Verständnis des Systems) und **Erklärbarkeit** der von der KI getroffenen Entscheidungen derzeit sehr schwierig (insb. bei **Deep Learning**) &rarr; aktuelle Forschung!\n",
-    "- Funktionalität von KI-Systemen vor dem Einsatz **nicht vollständig ausprogrammiert** &rarr; Anwendung lernfähiger Algorithmen auf Daten\n",
-    "- Anforderungen an KI-System oft nicht vollständig beschreibbar &rarr; zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
-    "- Grenzen für heute etablierten Methoden und Techniken des **systematischen Softwareentwurfs** und des **Testens sicherheitsrelevanter Software** (siehe z.B. V-Modell nach DIN EN 61508-3)\n",
-    "- weitere Herausforderung: relativ geringe Robustheit datengesteuerter Algorithmen aus dem Bereich des Deep Learning"
+    "- sicherheitstechnische Bewertbarkeit im Sinne von **Transparenz** (vollständiges Verständnis des Systems) und **Erklärbarkeit** der von der KI getroffenen Entscheidungen derzeit sehr schwierig (insb. bei **Deep Learning**) &rarr; aktuelle Forschung!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e0f9f54",
+   "id": "617feb5b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Funktionalität von KI-Systemen vor dem Einsatz **nicht vollständig ausprogrammiert**  \n",
+    "  &rarr; Anwendung lernfähiger Algorithmen auf Daten\n",
+    "- Anforderungen an KI-System oft nicht vollständig beschreibbar  \n",
+    "  &rarr; zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
+    "- **Grenzen** für heute etablierten Methoden und Techniken des **systematischen Softwareentwurfs** und des **Testens sicherheitsrelevanter Software** (siehe z.B. V-Modell nach DIN EN 61508-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9776f360",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -87,17 +99,15 @@
    "source": [
     "## Eine kurze Einführung (2)\n",
     "\n",
-    "- **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken\n",
+    "- weitere Herausforderung: relativ **geringe Robustheit datengesteuerter Algorithmen** aus dem Bereich des Deep Learning  \n",
+    "  &rarr; **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken\n",
     "- jedoch: **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens sind elementar für **Sicherheitsnachweis**\n",
-    "- sicherheitstechnische Bewertung oder **Prüfung** bzgl. funktionaler Sicherheit nach einheitlichen oder standardisierten Kriterien &rarr; Konsequenzen für die zukünftige Ausrichtung und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa\n",
-    "- bisher: klare Trennung zwischen **Inverkehrbringungsrecht** und **Arbeitsschutzrecht** nicht mehr möglich\n",
-    "- Grund: insb. **kontinuierlich lernenden** Systeme erlernen **angepasste Verhaltensweisen** während Betrieb &rarr; Änderung **sicherheitsrelevanter Eigenschaften**\n",
-    "- **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die Welt des **Maschinellen Lernens (ML)** als Teilgebiet der **Künstlichen Intelligenz (KI)**"
+    "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fcdbacbe",
+   "id": "8b4a1892",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -106,7 +116,24 @@
    "source": [
     "## Eine kurze Einführung (3)\n",
     "\n",
-    "- Akteure des **technischen Arbeitsschutzes**, die zukünftig lernfähige Systeme und deren KI-Algorithmen bewerten, sollten sich mit **grundlegenden Funktionsweisen** typischer ML-Algorithmen, geeigneten Software-Tools, Bibliotheken und Programmiersystemen vertraut machen\n",
+    "- Konsequenzen für die **zukünftige Ausrichtung** und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa  \n",
+    "  &rarr; bisherige klare Trennung zwischen **Inverkehrbringungsrecht** und **Arbeitsschutzrecht** nicht mehr möglich\n",
+    "- Grund: insb. **kontinuierlich lernende** Systeme erlernen **angepasste Verhaltensweisen** während Betrieb &rarr; Änderung **sicherheitsrelevanter Eigenschaften**!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1fee730",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Eine kurze Einführung (4)\n",
+    "\n",
+    "- **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die Welt des **Maschinellen Lernens (ML)** als Teilgebiet der **Künstlichen Intelligenz (KI)**\n",
+    "- insb. Akteure des **technischen Arbeitsschutzes**, die zukünftig lernfähige Systeme und deren KI-Algorithmen bewerten, sollten sich mit **grundlegenden Funktionsweisen** typischer ML-Algorithmen, geeigneten Software-Tools, Bibliotheken und Programmiersystemen vertraut machen\n",
     "- nur dann: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (+ Prüfstellen) möglich!\n",
     "- andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich"
    ]
@@ -191,7 +218,18 @@
     "- neben rein technischen oder finanziellen Merkmalen sollte auch auf eine breite **Unterstützung durch eine gut vernetzte Community** geachtet werden:\n",
     "    - ausgewogener Anteil aus **Herstellern** von Hardwarekomponenten,\n",
     "    - **Softwareentwickler** idealerweise aus dem **Open-Source-**Ökosystem und\n",
-    "    - eine aktive **Nutzer-Community**\n",
+    "    - eine aktive **Nutzer-Community**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bac8c1f9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "- ohne Unterstützung einer aktiven Community ist man bei Fragen oder Problemen (fast) auf sich allein gestellt\n",
     "- Empfehlung: Entscheiden Sie sich für die (technisch, preislich, etc.) **zweitbeste Alternative**, aber dafür mit einer großen **Community**!"
    ]
@@ -225,14 +263,14 @@
     "### Auswahl geeigneter **Software** (1)\n",
     "\n",
     "- Programmiersprachen  \n",
-    "&rarr; Erkenntnis: Es gibt **keine beste Programmiersprache für maschinelles Lernen**, jede ist dort gut, wo sie am besten passt.\n",
+    "&rarr; Prinzipielle Erkenntnis: Es gibt **keine beste Programmiersprache für maschinelles Lernen**, jede ist dort gut, wo sie am besten passt.\n",
     "\n",
-    "Folgendes **Trenddiagramm** zeigt die **Beliebtheit von Programmiersprachen** für ML (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), Lizenz: CC BY-SA 4.0):"
+    "Trenddiagramm: **Beliebtheit von Programmiersprachen** für ML (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B)):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "424acc41",
    "metadata": {
     "slideshow": {
@@ -247,7 +285,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {
       "image/png": {
        "width": 1000
@@ -276,7 +314,7 @@
     "    - Datenvisualisierung\n",
     "    - maschinenelles Lernen\n",
     "\n",
-    "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** ausgewählter **Python-Pakete** für **Datenanalyse**, **Datenvisualisierung** und **maschinelles Lernen** (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), Lizenz: CC BY-SA 4.0):"
+    "Trenddiagramm: **Beliebtheit** ausgewählter **Python-Pakete** für **Datenanalyse**, **Datenvisualisierung** und **maschinelles Lernen** (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib)):"
    ]
   },
   {
@@ -322,7 +360,7 @@
     "\n",
     "- Programmier- und Entwicklungsumgebungen (sog. IDEs)\n",
     "\n",
-    "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** ausgewählter **IDEs** für ML-Programmiersprachen (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), Lizenz: CC BY-SA 4.0):"
+    "Trenddiagramm: **Beliebtheit** ausgewählter **IDEs** für ML-Programmiersprachen (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code)):"
    ]
   },
   {
@@ -385,7 +423,7 @@
     "- Betriebsysteme:  \n",
     "    Arbeitsplatzrechner &lrarr; virtuelle Maschine &rarr; separater **Laborrechner**!\n",
     "\n",
-    "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** Betriebssysteme, die von **Datenanalysten** und **ML-Entwicklern** verwendet werden (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), Lizenz: CC BY-SA 4.0):"
+    "Trenddiagramm: **Beliebtheit** der Betriebssysteme, die von **Datenanalysten** und **ML-Entwicklern** verwendet werden (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos)):"
    ]
   },
   {
@@ -434,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "b4464200",
    "metadata": {
     "slideshow": {
@@ -449,7 +487,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {
       "image/png": {
        "width": 1500
@@ -473,7 +511,7 @@
    "source": [
     "## STEP 2: Explore the ML dataset\n",
     "\n",
-    "Ziele und **Haupt-Arbeitsschritte** bei der Datensatz-Erkundung:\n",
+    "Ziele und Haupt-Arbeitsschritte bei der **Datensatz-Erkundung**:\n",
     "\n",
     "- Klärung der **Ursprungsgeschichte** des Datensatzes\n",
     "- Überblick über die interne **Struktur und Organisation** der Daten im Datensatz\n",
@@ -493,7 +531,7 @@
    "source": [
     "## STEP 3: Choose and create the ML model\n",
     "\n",
-    "**Haupt-Arbeitsschritte**:\n",
+    "Haupt-Arbeitsschritte bei **Auswahl** und **Erzeugen** des ML-Modells:\n",
     "\n",
     "- **Kurz-Überblick** über die Welt der KI und **Taxonomie** der ML-Algorithmen\n",
     "- Auswahl eines geeigneten ML-Algorithmus anhand **Entscheidungsdiagramm**\n",
@@ -513,7 +551,7 @@
    "source": [
     "## STEP 4: Preprocess the dataset for training\n",
     "\n",
-    "**Haupt-Arbeitsschritte**:\n",
+    "Haupt-Arbeitsschritte beim **Vorbereiten** des Datensatzes:\n",
     "\n",
     "- Datensatz **bereinigen** (aufgrund Analyse im Schritt 2)\n",
     "- **Transformation** des Datensatzes durch **Skalierung** der Merkmale\n",
@@ -532,7 +570,7 @@
    "source": [
     "## STEP 5: Carry out training, prediction and testing\n",
     "\n",
-    "**Haupt-Arbeitsschritte**:\n",
+    "Haupt-Arbeitsschritte beim **Training**, der **Vorhersage** und dem **Test**:\n",
     "\n",
     "- **Aufteilung** des Datensatzes: **Trainings-** und **Testdatensatz**\n",
     "- **Standardisierung** der Datensätze\n",
@@ -579,7 +617,7 @@
     "- **C**-Parameter variieren\n",
     "- Variation des **Grades** (Ordnung)\n",
     "\n",
-    "Ziel: Demonstration des **Einflusses** auf das **Klassifikationsergebnis** durch **Variation** der einzelnen **Hyperparameter**"
+    "Ziel: Demonstration des **Einflusses** auf das **Klassifikationsergebnis** durch **manuelle Variation** der einzelnen **Hyperparameter**"
    ]
   },
   {
@@ -598,12 +636,14 @@
     "- Ermittlung einer **Basislinie** (SVC mit default Hyperparametern)\n",
     "- Hinzufügen von **Gaußschem Rauschen** zum Iris-Datensatz (**Messrauschen** simulieren)\n",
     "- **Rastersuche** durchführen\n",
-    "- **Zufallssuche** ausführen"
+    "- **Zufallssuche** ausführen\n",
+    "\n",
+    "Ziel: **Automatische Suche** nach günstigen **Hyperparametern** &rarr; Optimieren des **Klassifikationsergebnisses**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75103346",
+   "id": "50e470f1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -639,14 +679,6 @@
     "- [Presenting Code Using Jupyter Notebook Slides](https://medium.com/@mjspeck/presenting-code-using-jupyter-notebook-slides-a8a3c3b59d67)\n",
     "- [5 Slides for Tips on Presentation Mode in Jupyter Notebook](https://towardsdatascience.com/5-slides-for-tips-on-presentation-mode-in-jupyter-notebook-f858b15fff4f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8627a8e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
