changed transition type in presentation slides

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617feb5b",
+   "id": "44aecd1d",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4a1892",
+   "id": "855981e6",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac8c1f9",
+   "id": "55dea2fd",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -703,7 +703,7 @@
   "rise": {
    "scroll": true,
    "theme": "sky",
-   "transition": "zoom"
+   "transition": "slide"
   }
  },
  "nbformat": 4,
