reworked introduction of presentation slides

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -68,8 +68,11 @@
    "source": [
     "## Eine kurze Einführung (1)\n",
     "\n",
-    "- hohe Anforderungen hinsichtlich der **funktionalen Sicherheit** an **hochautomatisierte** oder **autonome Systeme** und die dafür eingesetzten **KI-Algorithmen**\n",
-    "- sicherheitstechnische Bewertbarkeit im Sinne von **Transparenz** (vollständiges Verständnis des Systems) und **Erklärbarkeit** der von der KI getroffenen Entscheidungen derzeit sehr schwierig (insb. bei **Deep Learning**) &rarr; aktuelle Forschung!"
+    "<!-- - hohe Anforderungen hinsichtlich der **funktionalen Sicherheit** an **hochautomatisierte** oder **autonome Systeme** und die dafür eingesetzten **KI-Algorithmen**\n",
+    "- sicherheitstechnische Bewertbarkeit im Sinne von **Transparenz** (vollständiges Verständnis des Systems) und **Erklärbarkeit** der von der KI getroffenen Entscheidungen derzeit sehr schwierig (insb. bei **Deep Learning**) &rarr; aktuelle Forschung! -->\n",
+    "\n",
+    "- Heute: Einsatz von **KI-Algorithmen** in **hochautomatisierten** oder **autonomen Systemen**  \n",
+    "  &rarr; hohe Anforderungen hinsichtlich der **funktionalen Sicherheit**"
    ]
   },
   {
@@ -81,11 +84,9 @@
     }
    },
    "source": [
-    "- Funktionalität von KI-Systemen vor dem Einsatz **nicht vollständig ausprogrammiert**  \n",
-    "  &rarr; Anwendung lernfähiger Algorithmen auf Daten\n",
-    "- Anforderungen an KI-System oft nicht vollständig beschreibbar  \n",
-    "  &rarr; zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
-    "- **Grenzen** für heute etablierten Methoden und Techniken des **systematischen Softwareentwurfs** und des **Testens sicherheitsrelevanter Software** (siehe z.B. V-Modell nach DIN EN 61508-3)"
+    "- Aber: **sicherheitstechnische Bewertbarkeit** derzeit sehr schwierig, insb.:\n",
+    "  - **Transparenz** in Bezug auf vollständiges Systemverständnis\n",
+    "  - **Erklärbarkeit** der von der KI getroffenen Entscheidungen"
    ]
   },
   {
@@ -99,10 +100,25 @@
    "source": [
     "## Eine kurze Einführung (2)\n",
     "\n",
-    "- weitere Herausforderung: relativ **geringe Robustheit datengesteuerter Algorithmen** aus dem Bereich des Deep Learning  \n",
-    "  &rarr; **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken\n",
-    "- jedoch: **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens sind elementar für **Sicherheitsnachweis**\n",
-    "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien**"
+    "- Paradigmenwechsel zu heutiger (klassischer) SW-Entwicklung:\n",
+    "  - Funktionalität von KI-Systemen vor dem Einsatz **nicht vollständig ausprogrammiert**  \n",
+    "    &rarr; **Anwendung** lernfähiger Algorithmen **auf große Datensätze**\n",
+    "  - Anforderungen an KI-Systeme: zuverlässige Funktion zur **Laufzeit** in sehr **großem Anwendungsraum** (Generalisierbarkeit)\n",
+    "  <!-- - zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
+    "  - Anforderungen an KI-System oft nicht vollständig beschreibbar  \n",
+    "    &rarr;  -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "796e5931",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- heute etablierte Methoden bzgl. **systematischer Softwareentwurf** und **Test sicherheitsrelevanter Software** nur **bedingt geeignet** (siehe z.B. V-Modell nach DIN EN 61508-3)"
    ]
   },
   {
@@ -116,9 +132,23 @@
    "source": [
     "## Eine kurze Einführung (3)\n",
     "\n",
-    "- Konsequenzen für die **zukünftige Ausrichtung** und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa  \n",
-    "  &rarr; bisherige klare Trennung zwischen **Inverkehrbringungsrecht** und **Arbeitsschutzrecht** nicht mehr möglich\n",
-    "- Grund: insb. **kontinuierlich lernende** Systeme erlernen **angepasste Verhaltensweisen** während Betrieb &rarr; Änderung **sicherheitsrelevanter Eigenschaften**!"
+    "<!-- - weitere Herausforderung: relativ **geringe Robustheit datengesteuerter Algorithmen** aus dem Bereich des Deep Learning  \n",
+    "  &rarr; **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken -->\n",
+    "- **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens sind elementar für **Sicherheitsnachweis**  \n",
+    "  &rarr; **kleine Änderungen** in **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fa9b104",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<!-- - Aber: relativ **geringe Robustheit datengesteuerter Algorithmen** (insb. Deep Learning) -->\n",
+    "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien**"
    ]
   },
   {
@@ -132,10 +162,72 @@
    "source": [
     "## Eine kurze Einführung (4)\n",
     "\n",
-    "- **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die Welt des **Maschinellen Lernens (ML)** als Teilgebiet der **Künstlichen Intelligenz (KI)**\n",
-    "- insb. Akteure des **technischen Arbeitsschutzes**, die zukünftig lernfähige Systeme und deren KI-Algorithmen bewerten, sollten sich mit **grundlegenden Funktionsweisen** typischer ML-Algorithmen, geeigneten Software-Tools, Bibliotheken und Programmiersystemen vertraut machen\n",
-    "- nur dann: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (+ Prüfstellen) möglich!\n",
-    "- andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich"
+    "<!-- - Konsequenzen für die **zukünftige Ausrichtung** und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa  \n",
+    "  &rarr; bisherige klare Trennung zwischen **Inverkehrbringungsrecht** und **Arbeitsschutzrecht** nicht mehr möglich\n",
+    "- Grund: insb. **kontinuierlich lernende** Systeme erlernen **angepasste Verhaltensweisen** während Betrieb &rarr; Änderung **sicherheitsrelevanter Eigenschaften**! -->\n",
+    "\n",
+    "- Bisher: klare Trennung zwischen **Inverkehrbringungsrecht** und **Arbeitsschutzrecht**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9891666a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Aber: insb. **kontinuierlich lernende** Systeme passen **Verhaltensweisen** während Betrieb an  \n",
+    "  &rarr; Änderung **sicherheitsrelevanter Eigenschaften** wahrscheinlich!  \n",
+    "  &rarr; Konsequenzen für die **zukünftige Ausrichtung** und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d270f31a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Eine kurze Einführung (5)\n",
+    "\n",
+    "<!-- - **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die Welt des **Maschinellen Lernens (ML)** als Teilgebiet der **Künstlichen Intelligenz (KI)** -->\n",
+    "<!-- - insb. Akteure des **technischen Arbeitsschutzes**, die zukünftig lernfähige Systeme und deren KI-Algorithmen bewerten, sollten sich mit **grundlegenden Funktionsweisen** typischer ML-Algorithmen, geeigneten Software-Tools, Bibliotheken und Programmiersystemen vertraut machen -->\n",
+    "<!-- - nur dann: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (+ Prüfstellen) möglich! -->\n",
+    "<!-- - andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich -->\n",
+    "\n",
+    "- **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die KI-Welt\n",
+    "- Ziel: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (insb. **Normung** + **Prüfstellen**)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce0e243a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Aufgabe für Akteure: Vertrautmachen mit **KI-Grundlagen** (bzgl. **Mögichkeiten** und **Risiken**):\n",
+    "  - Funktionsweisen typischer **KI-Algorithmen**\n",
+    "  - Anwendung geeigneter **Software-Bibliotheken**\n",
+    "  - Bedienung von **Programmiersystemen**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd3e88c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich"
    ]
   },
   {
@@ -217,7 +309,7 @@
     "\n",
     "- neben rein technischen oder finanziellen Merkmalen sollte auch auf eine breite **Unterstützung durch eine gut vernetzte Community** geachtet werden:\n",
     "    - ausgewogener Anteil aus **Herstellern** von Hardwarekomponenten,\n",
-    "    - **Softwareentwickler** idealerweise aus dem **Open-Source-**Ökosystem und\n",
+    "    - **Softwareentwickler** idealerweise aus dem **Open-Source**-Ökosystem und\n",
     "    - eine aktive **Nutzer-Community**"
    ]
   },
@@ -312,7 +404,7 @@
     "- Python-Pakete für:\n",
     "    - Datenanalyse\n",
     "    - Datenvisualisierung\n",
-    "    - maschinenelles Lernen\n",
+    "    - Maschinenelles Lernen\n",
     "\n",
     "Trenddiagramm: **Beliebtheit** ausgewählter **Python-Pakete** für **Datenanalyse**, **Datenvisualisierung** und **maschinelles Lernen** (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib)):"
    ]
@@ -554,8 +646,8 @@
     "Haupt-Arbeitsschritte beim **Vorbereiten** des Datensatzes:\n",
     "\n",
     "- Datensatz **bereinigen** (aufgrund Analyse im Schritt 2)\n",
-    "- **Transformation** des Datensatzes durch **Skalierung** der Merkmale\n",
-    "    - **Normalisierung**\n",
+    "- **Transformation** des Datensatzes durch **Skalierung** der Merkmale durch\n",
+    "    - **Normalisierung** oder\n",
     "    - **Standardisierung**"
    ]
   },
@@ -570,12 +662,12 @@
    "source": [
     "## STEP 5: Carry out training, prediction and testing\n",
     "\n",
-    "Haupt-Arbeitsschritte beim **Training**, der **Vorhersage** und dem **Test**:\n",
+    "Haupt-Arbeitsschritte beim **Training** und der **Vorhersage** der Klassen:\n",
     "\n",
     "- **Aufteilung** des Datensatzes: **Trainings-** und **Testdatensatz**\n",
     "- **Standardisierung** der Datensätze\n",
     "- **Trainieren** des SVC-Modells\n",
-    "- **Vorhersagen** treffen mithilfe des **Testdatensatzes**"
+    "- **Vorhersagen** treffen mithilfe des ungelabelten **Testdatensatzes**"
    ]
   },
   {
@@ -591,10 +683,10 @@
     "\n",
     "Bewertung der **Qualität des Klassifikationsergebnisses** anhand bekannter **Metriken**:\n",
     "\n",
-    "- Genauigkeitswert\n",
-    "- Klassifikationsbericht\n",
-    "- Kreuzvalidierungsergebnis\n",
-    "- Konfusionsmatrix"
+    "- Genauigkeitswert (**Accuracy Score**)\n",
+    "- Klassifikationsbericht (**Classification Report**)\n",
+    "- Kreuzvalidierungsergebnis (**Cross-validation score**)\n",
+    "- Konfusionsmatrix (**Confusion matrix**)"
    ]
   },
   {
@@ -650,7 +742,23 @@
     }
    },
    "source": [
-    "## Zusammenfassung und Ausblick"
+    "## Zusammenfassung und Ausblick\n",
+    "\n",
+    "- Veranschaulichung der **Prozessschritte** des typischen **ML-Workflows** am Beispiel **Support Vector Classifier (SVC)** und **Iris-Datensatz**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a8443f0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Ausblick:\n",
+    "    - Erweiterung um Hinweise zum **Aufbau** eigener realer **ML-Applikationen** und **Erzeugung** geeigneter **Datensätze** für Klassifikation / Regression\n",
+    "    - Verwendung des ML-Workflows als mögliche **Grundlage für Prüfgrundsätze** &rarr; **Review** industrieller **ML-Applikationen**"
    ]
   },
   {
@@ -672,9 +780,9 @@
     "\n",
     "Refer to:\n",
     "\n",
-    "- [RISE: Reveal.js - Jupyter/IPython Slideshow Extension](https://rise.readthedocs.io/en/maint-5.5/index.html)\n",
-    "    - [Installation](https://rise.readthedocs.io/en/maint-5.5/installation.html)\n",
-    "    - [Creating a slideshow](https://rise.readthedocs.io/en/maint-5.5/usage.html#creating-a-slideshow)\n",
+    "- [RISE: Reveal.js - Jupyter/IPython Slideshow Extension](https://rise.readthedocs.io/en/stable/)\n",
+    "    - [Installation](https://rise.readthedocs.io/en/stable/installation.html)\n",
+    "    - [Creating a slideshow](https://rise.readthedocs.io/en/stable/usage.html#creating-a-slideshow)\n",
     "    - [reveal: Config Options, Themes, Transitions ...](https://revealjs.com/themes/)\n",
     "- [Presenting Code Using Jupyter Notebook Slides](https://medium.com/@mjspeck/presenting-code-using-jupyter-notebook-slides-a8a3c3b59d67)\n",
     "- [5 Slides for Tips on Presentation Mode in Jupyter Notebook](https://towardsdatascience.com/5-slides-for-tips-on-presentation-mode-in-jupyter-notebook-f858b15fff4f)"
@@ -698,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "rise": {
    "scroll": true,
