small changes to presentation slides

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -104,9 +104,10 @@
     "  - Funktionalität von KI-Systemen vor dem Einsatz **nicht vollständig ausprogrammiert**  \n",
     "    &rarr; **Anwendung** lernfähiger Algorithmen **auf große Datensätze**\n",
     "  - Anforderungen an KI-Systeme: zuverlässige Funktion zur **Laufzeit** in sehr **großem Anwendungsraum** (Generalisierbarkeit)\n",
-    "  <!-- - zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
-    "  - Anforderungen an KI-System oft nicht vollständig beschreibbar  \n",
-    "    &rarr;  -->"
+    "  \n",
+    "<!-- - zuverlässige Funktion zur Laufzeit in sehr großem Anwendungsraum\n",
+    "- Anforderungen an KI-System oft nicht vollständig beschreibbar  \n",
+    "&rarr;  -->"
    ]
   },
   {
@@ -134,6 +135,7 @@
     "\n",
     "<!-- - weitere Herausforderung: relativ **geringe Robustheit datengesteuerter Algorithmen** aus dem Bereich des Deep Learning  \n",
     "  &rarr; **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken -->\n",
+    "  \n",
     "- **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens sind elementar für **Sicherheitsnachweis**  \n",
     "  &rarr; **kleine Änderungen** in **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken"
    ]
@@ -148,6 +150,7 @@
    },
    "source": [
     "<!-- - Aber: relativ **geringe Robustheit datengesteuerter Algorithmen** (insb. Deep Learning) -->\n",
+    "\n",
     "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien**"
    ]
   },
@@ -179,7 +182,8 @@
    },
    "source": [
     "- Aber: insb. **kontinuierlich lernende** Systeme passen **Verhaltensweisen** während Betrieb an  \n",
-    "  &rarr; Änderung **sicherheitsrelevanter Eigenschaften** wahrscheinlich!  \n",
+    "  &rarr; Änderung **sicherheitsrelevanter Eigenschaften** wahrscheinlich!\n",
+    "  \n",
     "  &rarr; Konsequenzen für die **zukünftige Ausrichtung** und Gestaltung des technischen **Arbeitsschutzes** in Deutschland und in Europa"
    ]
   },
@@ -199,7 +203,7 @@
     "<!-- - nur dann: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (+ Prüfstellen) möglich! -->\n",
     "<!-- - andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich -->\n",
     "\n",
-    "- **sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die KI-Welt\n",
+    "- **Sicherheitstechnische Beurteilung lernfähiger Systeme** erfordert vertiefte technische Einführung in die KI-Welt\n",
     "- Ziel: konstruktive, kritische und **technisch angemessene Begleitung** der rasanten **Entwicklung** lernfähiger Systeme durch Arbeitsschutz-Akteure (insb. **Normung** + **Prüfstellen**)"
    ]
   },
@@ -744,7 +748,9 @@
    "source": [
     "## Zusammenfassung und Ausblick\n",
     "\n",
-    "- Veranschaulichung der **Prozessschritte** des typischen **ML-Workflows** am Beispiel **Support Vector Classifier (SVC)** und **Iris-Datensatz**"
+    "- Ziel des **Getting-Started-Tutorials**:\n",
+    "    - Erlernen der systematischen **Prozessschritte** des typischen **ML-Workflows**\n",
+    "    - Veranschaulichung am Beispiel **Support Vector Classifier (SVC)** und **Iris-Datensatz**"
    ]
   },
   {
@@ -806,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.6"
   },
   "rise": {
    "scroll": true,
