reworked layout of cover page (arrangement of the CC license)

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -418,15 +418,17 @@
     \vfill
     
     \noindent
-    \begin{tabular}{l l}
-    \begin{minipage}{0.24\textwidth}
-        \includegraphics{images/CC_BY-SA_40.png}
-    \end{minipage}
-    &
-    \begin{minipage}{0.68\textwidth}
-        This work is licensed under a \href{https://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)}.
-    \end{minipage}
-    \end{tabular}
+    \begin{center}
+	    \begin{tabular}{>{\centering}m{0.2\textwidth}m{0.65\textwidth}}
+	    \begin{minipage}{\linewidth}
+	        \includegraphics{images/CC_BY-SA_40.png}
+	    \end{minipage}
+	    &
+	    \begin{minipage}{\linewidth}
+	        This work is licensed under a \href{https://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)}.
+	    \end{minipage}
+	    \end{tabular}
+	\end{center}
 
     \newpage
 
